--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-db/development.sqlite3*
+db/*.sqlite3*
 config/credentials*
